1. Added styling to tooltip. 2. Added new icons to tinyMCE initialization (bold, ital, alignment). 3. Correct defaulting of excerpt when subtitle is entered.

--- a/_css/style.css
+++ b/_css/style.css
@@ -240,12 +240,14 @@ input[type=button] {
 	padding:20px;
 	max-width:200px;
 	background-color:rgba(0,0,0,.85);
-	-webkit-border-radius:12px;
-	-moz-border-radius:12px;
-	border-radius:12px;
 	font-size:.8em;
 	display:none;
-}
+	-webkit-border-radius:6px;
+	-moz-border-radius:6px;
+	border-radius:6px;
+	-webkit-box-shadow:0 3px 7px rgba(0,0,0,0.3);
+	-moz-box-shadow:0 3px 7px rgba(0,0,0,0.3);
+	box-shadow:0 3px 7px rgba(0,0,0,0.3);	}
 /* Styling for info button */
 .info_button {
 	float:left;
